Fixed padding and visible only owl icon

--- a/src/app/pages/schedule/schedule.component.css
+++ b/src/app/pages/schedule/schedule.component.css
@@ -265,7 +265,7 @@
     height: 100%;
     box-sizing: border-box;
     padding: 10px;
-    padding-top: 4px;
+    padding-top: 2px;
     overflow: hidden;
     padding-left: 10px;
     padding-right: 10px;
